# customer-support-backend

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/dependencies/: auth.py
app/api/endpoints/: auth.py  tickets.py
app/core/: config.py
app/migrations/: env.py
app/models/: message.py  ticket.py  user.py
app/schemas/: message.py  ticket.py  user.py
app/services/: ai.py  auth.py  ticket.py
app/utils/: database.py  security.py
